# sdr-research-oss

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml  lint.yml
api/: Dockerfile  pyproject.toml
api/app/: config.py  database.py  main.py  models.py
api/app/routers/: admin.py  aprs.py  events.py  files.py  repeaters.py  search.py  spots.py  stats.py  waveform.py  weather.py
api/app/services/: alerting.py  aprs_is.py  audio.py  hamdb.py  indexer.py  known_freqs.py  metrics.py  repeater.py  tagging.py  transcription.py
api/tests/: conftest.py  test_health.py  test_imports.py  test_known_freqs.py  test_no_speech_and_cw.py  test_sdr_bandplan.py  test_transcription_queue.py
decoders/acars/: Dockerfile  README.md  acars_decode.sh
decoders/aprs/: Dockerfile  aprs_decode.sh
decoders/cw/: Dockerfile  cw_decode.py
decoders/eas/: Dockerfile  eas_decode.sh
decoders/ft8-wspr/: Dockerfile  README.md
decoders/pager/: Dockerfile  pager_decode.sh
decoders/spectrum-exporter/: Dockerfile  spectrum_exporter.py
decoders/sstv/: Dockerfile  sstv-entrypoint.py
decoders/unified-sdr/: Dockerfile  bandplan.py  unified_sdr.py
decoders/vdl2/: Dockerfile  README.md  rtl_tcp_client.py  run_vdl2.sh
decoders/voice/: Dockerfile  transcribe.py
deploy/helm/: README.md
docs/: architecture.md  configuration.md  hardware-matrix.md  ollama-setup.md  publishing.md  repeaterbook-setup.md  security.md
ui/: Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.ts
(+65 files in other folders)
