[project]
name = "sdr-viewer-api"
version = "0.1.0"
description = "SDR Recording Review API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "librosa>=0.10.1",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "prometheus-fastapi-instrumentator>=0.9.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
